--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,17 @@
     <string name="initiateNavigationPrompt">Where would you like to go ?</string>
     <string name="couldNotFindLocation">We couldn\'t find a location with that name. Try Again.</string>
     <string name="initiatePrompt">What would you like to do ?</string>
+    <string name="continueStraight">Go Straight</string>
+    <string name="turnLeft">Turn Left</string>
+    <string name="turnRight">Turn Right</string>
+    <string name="turnAround">Turn Around</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="action_settings">Settings</string>
+    <string name="threshold">threshold_text</string>
+    <string name="degrees">degrees_text</string>
+    <string name="Gender_men">Men</string>
+    <string name="Gender_Women">Women</string>
+    <string name="Gender_Unisex">Unisex</string>
+
+
 </resources>
