--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,10 @@
     <string name="Gender_Women">Women</string>
     <string name="Gender_Unisex">Unisex</string>
     <string name="action_main">Visio</string>
+    <string name="title_activity_edison_launcher">EdisonLauncher</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
